# SP3

./: CMakeLists.txt  SPArrayList.c  SPArrayList.h  SPFIAR  SPFIARGame.c  SPFIARGame.h  SPFIARParser.c  SPFIARParser.h  SPFIARParserUnitTest.c  SPMainAux.c  SPMainAux.h  SPMiniMax.c  SPMiniMax.h  SPMiniMaxNode.c  SPMiniMaxNode.h  main.c  makefile  out1  out2  test1.in  test1.out  test2.in  test2.out
